Fixed header and bottom white space issue

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -6,7 +6,6 @@
   align-items: center;
   background-color: #fbfbfb;
   padding: 15px;
-  margin-bottom: 5px;
   padding-bottom: 10px;
   box-shadow: 0px 4px 6px -4px rgba(0, 0, 0, 0.5);
 }
